# eh-exercises

./: README.md  time-pure-function.hs
chapter1/: currying.hs  factorials.hs  fibonacci.hs  flake.nix
chapter10/: .gitignore  Makefile  example-text.txt  flake.nix  make-example-dir.sh  metrics-strictness.hs  metrics-strictness1.hs  metrics-strictness1.txt  metrics-strictness2.hs  metrics-strictness2.txt  run-both.sh  time-pure-function.hs  traverse-directory.hs
chapter11/: file-archiver.hs  flake.nix  nested-filepacks.hs  nested-filepacks.nix  real-archival-tool.hs  trace-tool.hs
chapter12/: FilePackParser.hs  a-configurable-status-line-for-hcat.hs  command-line-argument-parsing.hs  file-archiver.hs  flake.nix  pretty-printing-and-parsing.hs
chapter13/: FilePackParser.hs  ReaderT.hs  file-archiver.hs  flake.nix
chapter14/: cabal.project.local  correct.prof  default.nix  flake.nix  helllos.txt  hie.yaml  listmemo.prof  remember.prof  shell.nix  small-dictionary.txt  spellcheck.cabal  spellcheck.nix  spellcheck.prof  st.prof  stref.prof  words.txt
chapter14/app/: Main.hs
chapter14/profs/: correct.prof  remember.prof
chapter14/profs/big-test-list/: correct.prof  micro.prof  remember.prof
chapter14/profs/helllo/: micro.prof  stvec.prof
chapter14/src/: Correct.hs  ListMemo.hs  Micro.hs  Naive.hs  Remember.hs  ST.hs  STRef.hs  STVec.hs  Types.hs
chapter14/src/SpellCheck/: Naive.hs
chapter14/words/: big-test-list.txt  small-test-list.txt
chapter15/: BetterIfExpressions.hs  CommandRunner.hs  HasNamedTypeAssTypeFams.hs  HasNamedTypeOpenTypeFams.hs  PeanoClosedTypeFams.hs  README.md  ShellCommand.hs  ShellCommandAssDataFam.hs  ShellCommandAssDataFams.hs  ShellCommandAssTypeFam.hs  ShellCommandAssTypeFams.hs  ShellCommandFunDeps.hs  ShellCommandGADTs.hs  TerminalMux.hs  TwoLists.hs  TypeFamilyListFuncs.hs  flake.nix
chapter2/: concatmap.hs  flake.nix  folds-and-infinite-lists.md  maps-n-folds.hs  reversing.hs  zipping.hs
chapter3/: flake.nix  functions-by-their-type.hs  undefined.hs  voided-warranty.md
chapter4/: division-by-zero.hs  flake.nix  planting-trees.hs  pretty-printer.hs
chapter8/: default.nix  flake.nix  hcat.cabal  hcat.nix  hie.yaml  shell.nix
chapter8/app/: Main.hs
chapter8/src/: HCat.hs
chapter8/test/: Spec.hs
(+16 files in other folders)
