cabal-version:  2.4
name:           spellcheck
version:        0.1.0.0

library
  hs-source-dirs: src
  exposed-modules:
      ListMemo
    , Naive
    , ST
    , Types
  build-depends:
      base
    , containers
    , text
    , vector
  default-language: Haskell2010

executable spellcheck
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base
    , spellcheck
    , text
  default-language: Haskell2010
