cabal-version:  2.4
name:           hcat
version:        0.1.0.0

common common-extensions
  default-extensions:
    LambdaCase
    OverloadedStrings
    RecordWildCards
    TypeApplications

library
  import: common-extensions
  hs-source-dirs: src
  exposed-modules: HCat
  build-depends:
      base
    , bytestring
    , text
    , process
    , directory
    , time
  default-language: Haskell2010

executable hcat
  import: common-extensions
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: base, hcat
  default-language: Haskell2010

test-suite test
  import: common-extensions
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  build-depends:
    , base
    , hcat
    , hspec
    , QuickCheck
    , quickcheck-instances
    , text
  default-language: Haskell2010
